--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -1,25 +1,34 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="dk.illution.computer.info"
-    android:versionCode="1"
-    android:versionName="1.0" >
+		package="dk.illution.computer.info"
+		android:versionCode="1"
+		android:versionName="1.0" >
 
-    <uses-sdk
-        android:minSdkVersion="7"
-        android:targetSdkVersion="15" />
+		<uses-sdk
+				android:minSdkVersion="11"
+				android:targetSdkVersion="15" />
 
-    <application
-        android:icon="@drawable/ic_launcher"
-        android:label="@string/app_name"
-        android:theme="@style/AppTheme" >
-        <activity
-            android:name=".MainActivity"
-            android:label="@string/title_activity_main" >
-            <intent-filter>
-                <action android:name="android.intent.action.MAIN" />
+		<application
+				android:icon="@drawable/ic_launcher"
+				android:label="@string/app_name"
+				android:theme="@style/AppTheme" >
+				<activity
+						android:name=".MainActivity"
+						android:label="@string/title_activity_main" >
+						<intent-filter>
+								<action android:name="android.intent.action.MAIN" />
 
-                <category android:name="android.intent.category.LAUNCHER" />
-            </intent-filter>
-        </activity>
-    </application>
+								<category android:name="android.intent.category.LAUNCHER" />
+						</intent-filter>
+				</activity>
+				<activity
+						android:name=".Login"
+						android:label="@string/title_activity_login" >
+						<intent-filter>
+								<action android:name="android.intent.action.MAIN" />
+
+								<category android:name="android.intent.category.LAUNCHER" />
+						</intent-filter>
+				</activity>
+		</application>
 
 </manifest>
