--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -13,7 +13,7 @@
 				android:theme="@style/AppTheme" >
 				<activity
 						android:name=".LoginSelectActivity"
-						android:label="@string/title_activity_main" >
+						android:label="@string/computer_info" >
 						<intent-filter>
 								<action android:name="android.intent.action.MAIN" />
 
@@ -22,12 +22,7 @@
 				</activity>
 				<activity
 						android:name=".LoginActivity"
-						android:label="@string/title_activity_login" >
-						<intent-filter>
-								<action android:name="android.intent.action.MAIN" />
-
-								<category android:name="android.intent.category.LAUNCHER" />
-						</intent-filter>
+						android:label="@string/computer_info" >
 				</activity>
 		</application>
 
