--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -1,29 +1,36 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-		package="dk.illution.computer.info"
-		android:versionCode="1"
-		android:versionName="1.0" >
+    package="dk.illution.computer.info"
+    android:versionCode="1"
+    android:versionName="1.0" >
 
-		<uses-sdk
-				android:minSdkVersion="11"
-				android:targetSdkVersion="15" />
+    <uses-sdk
+        android:minSdkVersion="14"
+        android:targetSdkVersion="15" />
 
-		<application
-				android:icon="@drawable/ic_launcher"
-				android:label="@string/app_name"
-				android:theme="@style/AppTheme" >
-				<activity
-						android:name=".LoginSelectActivity"
-						android:label="@string/computer_info" >
-						<intent-filter>
-								<action android:name="android.intent.action.MAIN" />
+    <application
+        android:icon="@drawable/ic_launcher"
+        android:label="@string/app_name"
+        android:theme="@style/AppTheme" >
+        <activity
+            android:name=".LoginSelectActivity"
+            android:label="@string/computer_info" >
+            <intent-filter>
+                <action android:name="android.intent.action.MAIN" />
 
-								<category android:name="android.intent.category.LAUNCHER" />
-						</intent-filter>
-				</activity>
-				<activity
-						android:name=".LoginActivity"
-						android:label="@string/computer_info" >
-				</activity>
-		</application>
+                <category android:name="android.intent.category.LAUNCHER" />
+            </intent-filter>
+        </activity>
+        <activity
+            android:name=".LoginActivity"
+            android:label="@string/computer_info" >
+        </activity>
+        <activity
+            android:name=".MainActivity"
+            android:label="@string/computer_info" >
+            <intent-filter>
+                <action android:name="android.intent.action.MAIN" />
+            </intent-filter>
+        </activity>
+    </application>
 
 </manifest>
