--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -27,7 +27,7 @@
 				<activity
 						android:name=".MainActivity"
 						android:label="@string/computer_info"
-						android:logo="@drawable/computer">
+						android:logo="@drawable/camera">
 						<intent-filter>
 								<action android:name="android.intent.action.MAIN" />
 								<category android:name="android.intent.category.LAUNCHER" />
