--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -6,6 +6,7 @@
 		<uses-sdk
 				android:minSdkVersion="14"
 				android:targetSdkVersion="15" />
+		<uses-permission android:name="android.permission.INTERNET"/>
 
 		<application
 				android:icon="@drawable/ic_launcher"
@@ -27,7 +28,7 @@
 				<activity
 						android:name=".MainActivity"
 						android:label="@string/computer_info"
-						android:logo="@drawable/camera">
+						android:logo="@drawable/computer">
 						<intent-filter>
 								<action android:name="android.intent.action.MAIN" />
 								<category android:name="android.intent.category.LAUNCHER" />
