--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -1,39 +1,57 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-		package="dk.illution.computer.info"
-		android:versionCode="1"
-		android:versionName="1.0" >
+    package="dk.illution.computer.info"
+    android:versionCode="1"
+    android:versionName="1.0" >
 
-		<uses-sdk
-				android:minSdkVersion="14"
-				android:targetSdkVersion="15" />
-		<uses-permission android:name="android.permission.INTERNET"/>
+    <uses-sdk
+        android:minSdkVersion="14"
+        android:targetSdkVersion="15" />
 
-		<application
-				android:icon="@drawable/ic_launcher"
-				android:label="@string/app_name"
-				android:theme="@style/AppTheme" >
-				<activity
-						android:name=".LoginSelectActivity"
-						android:label="@string/computer_info"
-						android:logo="@drawable/secure">
-						<intent-filter>
-								<action android:name="android.intent.action.MAIN" />
-						</intent-filter>
-				</activity>
-				<activity
-						android:name=".LoginActivity"
-						android:label="@string/computer_info"
-						android:logo="@drawable/secure">
-				</activity>
-				<activity
-						android:name=".MainActivity"
-						android:label="@string/computer_info"
-						android:logo="@drawable/computer">
-						<intent-filter>
-								<action android:name="android.intent.action.MAIN" />
-								<category android:name="android.intent.category.LAUNCHER" />
-						</intent-filter>
-				</activity>
-		</application>
+    <uses-permission android:name="android.permission.INTERNET" />
+
+    <application
+        android:icon="@drawable/ic_launcher"
+        android:label="@string/app_name"
+        android:theme="@style/AppTheme" >
+        <activity
+            android:name=".LoginSelectActivity"
+            android:label="@string/computer_info"
+            android:logo="@drawable/secure" >
+            <intent-filter>
+                <action android:name="android.intent.action.MAIN" />
+            </intent-filter>
+        </activity>
+        <activity
+            android:name=".LoginActivity"
+            android:label="@string/computer_info"
+            android:logo="@drawable/secure" >
+        </activity>
+        <activity
+            android:name=".MainActivity"
+            android:label="@string/computer_info"
+            android:logo="@drawable/computer" >
+            <intent-filter>
+                <action android:name="android.intent.action.MAIN" />
+
+                <category android:name="android.intent.category.LAUNCHER" />
+            </intent-filter>
+        </activity>
+        <activity
+            android:name=".ComputerListActivity"
+            android:label="@string/title_computer_list" >
+            <intent-filter>
+                <action android:name="android.intent.action.MAIN" />
+
+                <category android:name="android.intent.category.LAUNCHER" />
+            </intent-filter>
+        </activity>
+        <activity
+            android:name=".ComputerDetailActivity"
+            android:label="@string/title_computer_detail" >
+            <meta-data
+                android:name="android.support.PARENT_ACTIVITY"
+                android:value=".ComputerListActivity" />
+        </activity>
+    </application>
 
 </manifest>
