--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -10,6 +10,7 @@
 		<uses-permission android:name="android.permission.INTERNET" />
 
 		<application
+					android:name="ComputerInfo"
 				android:icon="@drawable/ic_launcher"
 				android:label="@string/app_name"
 				android:theme="@style/AppTheme" >
@@ -29,7 +30,8 @@
 				<activity
 						android:name=".ComputerListActivity"
 						android:label="@string/title_computer_list"
-						android:logo="@drawable/computer" >
+						android:logo="@drawable/computer"
+						android:launchMode="singleTop" >
 						<intent-filter>
 								<action android:name="android.intent.action.MAIN" />
 
