--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -15,7 +15,7 @@
 				android:name="ComputerInfo"
 				android:icon="@drawable/ic_launcher"
 				android:label="@string/app_name"
-				android:theme="@style/AppTheme" >
+				android:theme="@style/Theme.Example">
 				<activity
 						android:name=".Preferences"
 						android:label="@string/preferences"
