--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -5,7 +5,7 @@
 
     <uses-sdk
             android:minSdkVersion="14"
-            android:targetSdkVersion="15"/>
+            android:targetSdkVersion="17"/>
 
     <uses-permission android:name="android.permission.INTERNET"/>
     <uses-permission android:name="android.permission.GET_ACCOUNTS"/>
@@ -15,7 +15,8 @@
             android:name="ComputerInfo"
             android:icon="@drawable/ic_launcher"
             android:label="@string/app_name"
-            android:theme="@style/Theme.Example">
+            android:theme="@style/Theme.Example"
+            android:allowBackup="false">
         <activity
                 android:name=".Preferences"
                 android:label="@string/preferences"
